Fix for opening javascript: popup windows in embedding. b=149307 r=adamlock@netscape.com sr=jst@netscape.com